# Demoloops

./: .gitignore  CMakeLists.txt  LICENSE  README.md  gifenc.sh  videnc.sh
lib/demoloop-lib/: CMakeLists.txt
lib/demoloop-lib/include/: cleanup.h  demoloop.h  demoloop_opengl.h  helpers.h  hsl.h  opengl_helpers.h  res_path.h
lib/demoloop-lib/include/audio/: source.h
lib/demoloop-lib/include/common/: color.h  math.h  matrix.h  object.h  quaternion.h  string_map.h  vector.h
lib/demoloop-lib/include/graphics/: 2d_primitives.h  3d_primitives.h  canvas.h  drawable.h  geometry.h  gl.h  image.h  mesh.h  polyline.h  quad.h  shader.h  texture.h
lib/demoloop-lib/src/: demoloop.cpp  demoloop_opengl.cpp  helpers.cpp  hsl.cpp  opengl_helpers.cpp
lib/demoloop-lib/src/audio/: source.cpp
lib/demoloop-lib/src/common/: matrix.cpp  object.cpp  vector.cpp
lib/demoloop-lib/src/graphics/: 2d_primitives.cpp  3d_primitives.cpp  canvas.cpp  gl.cpp  image.cpp  mesh.cpp  polyline.cpp  quad.cpp  shader.cpp  texture.cpp
lib/poly2tri/: CMakeLists.txt
src/: asset_test.cpp  bezier.cpp  canvas.cpp  carpenter_brut.cpp  compile_time_geometry.cpp  constellations.cpp  cube_tube.cpp  domain_warping.cpp  gradients.cpp  hope.cpp  loop001.cpp  loop002.cpp  loop003.cpp  loop004.cpp  loop005.cpp  loop006.cpp  loop007.cpp  loop008.cpp  loop009.cpp  loop010.cpp  loop011.cpp  loop012.cpp  loop013.cpp  loop014.cpp  loop015.cpp  loop016.cpp  loop017.cpp  loop018.cpp  loop019.cpp  loop020.cpp  loop021.cpp  loop022.cpp  loop023.cpp  loop024.cpp  loop025.cpp  loop026.cpp  loop027.cpp  loop028.cpp  loop029.cpp  loop030.cpp  (+85 more)
